<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="de.mbranig.emiexercise3.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true" android:layout_alignParentStart="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/task_1"
            android:id="@+id/textView" android:textColor="@color/tuAkzentfarbe1BlauHell"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/task_1_desc"
            android:id="@+id/textView2"/>

        <Button
            android:id="@+id/buttonTask1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_1_btn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/task_2"
            android:id="@+id/textView4" android:textColor="@color/tuAkzentfarbe1BlauHell"
            android:layout_marginTop="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/task_2_desc"
            android:id="@+id/textView6"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_2_btn"
            android:id="@+id/buttonTask2" android:layout_gravity="center_horizontal"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:id="@+id/imageView2"
                android:src="@drawable/dresden_concept_logo" android:layout_alignParentTop="true"
                android:layout_alignParentRight="true" android:layout_alignParentEnd="true"
                android:scaleType="fitEnd" android:layout_marginTop="20dp"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
